--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="scripts.js"></script>
 </head>
 <body>
+    <div id="title">Etch-a-sketch</div>
+    <div>
+        <button onclick="promptUser()">Change grid</button>
+    </div>
     <div id="container"></div>
 </body>
 </html>
