Add content div The content div is the container for title, button, and drawing area

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-    <div id="title">Etch-a-sketch</div>
-    <div>
-        <button onclick="promptUser()">Change grid</button>
+    <div id="content">
+        <div id="title">Etch-a-sketch</div>
+        <div>
+            <button onclick="promptUser()">Change grid</button>
+        </div>
+        <div id="container"></div>
     </div>
-    <div id="container"></div>
 </body>
 </html>
